--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <label for="cartoon">Is a Cartoon: </label>
           <input name="cartoon" type="checkbox">
         </div>
-        <button id="send-data">Create</button>
+        <button id="create-send-data">Create</button>
       </form>
     </section>
     <section class="form-container">
